[package]
name = "todo_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
clap = {version = "4.5", features = ["derive"]}
anyhow = {version = "1.0"}
time = {version="0.3",features=["serde","local-offset"]}
serde = {version = "1.0", features = ["derive"]}
bincode = {version = "2.0", features = ["serde"]}
